--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-banner-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-banner-modal.tpl.html
@@ -1,5 +1,5 @@
 <md-dialog id="edit-banner-dialog">
-    <md-toolbar layout="horizontal" layout-align="">
+    <md-toolbar layout="row" layout-align="">
         <div layout layout-align="start center">
             <div flex>Pick a banner</div>
             <md-button class="md-button-fab" ng-click="cancel()">
