--- a/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/cropPosterModal.tpl.html
@@ -1,5 +1,5 @@
 <md-dialog id="crop-poster-modal">
-    <md-toolbar layout="horizontal" layout-align="">
+    <md-toolbar layout="row" layout-align="">
         <div layout layout-align="start center">
             <span flex>Your profile page</span>
             <md-button class="md-button-fab" ng-click="cancel()">
