--- a/client/app/modules/admin/profile/templates/modal/editPageModal.tpl.html
+++ b/client/app/modules/admin/profile/templates/modal/editPageModal.tpl.html
@@ -1,7 +1,7 @@
-<!--<md-whiteframe class="md-whiteframe-z1" layout="vertical"  style="z-index: 19;">-->
+<!--<md-whiteframe class="md-whiteframe-z1" layout="column"  style="z-index: 19;">-->
 
 <md-dialog>
-    <md-toolbar layout="horizontal" layout-align="">
+    <md-toolbar layout="row" layout-align="">
         <div layout layout-align="start center">
             <span flex>Profile edition</span>
             <md-button class="md-button-fab" ng-click="updateProfile()">
