--- a/client/app/modules/admin/project/templates/modal/inviteModal.tpl.html
+++ b/client/app/modules/admin/project/templates/modal/inviteModal.tpl.html
@@ -1,5 +1,5 @@
 <md-dialog>
-    <md-toolbar layout="horizontal" layout-align="start end">
+    <md-toolbar layout="row" layout-align="start end">
         <div flex>
             Invite some people
         </div>
