--- a/client/app/modules/admin/project/templates/projectSettings.tpl.html
+++ b/client/app/modules/admin/project/templates/projectSettings.tpl.html
@@ -1,4 +1,4 @@
-<md-content layout="vertical" >
+<md-content layout="column" >
     <md-tabs selected="selectedIndex" center>
         <h2 class="center">{{ project.title }} Administration</h2>
         <md-tab>
