--- a/client/app/modules/auth/templates/modal/after-auth.tpl.html
+++ b/client/app/modules/auth/templates/modal/after-auth.tpl.html
@@ -1,9 +1,9 @@
-<md-dialog class="md-whiteframe-z1" layout="vertical"  style="z-index: 19; width:60%; padding-bottom:20px;">
+<md-dialog class="md-whiteframe-z1" layout="column"  style="z-index: 19; width:60%; padding-bottom:20px;">
     <md-toolbar>
         <div flex class="center">
             Additional information
         </div>
-        <md-button type="button" class="md-button-raised" ng-click="updateProfile()" style="width:100%">Update</md-button>
+        <md-button type="button" class="md-raised" ng-click="updateProfile()" style="width:100%">Update</md-button>
     </md-toolbar>
     <md-content>
         <form name="afterForm" style="padding-left: 10px;">
