--- a/client/app/modules/footer/templates/footer.tpl.html
+++ b/client/app/modules/footer/templates/footer.tpl.html
@@ -1,5 +1,5 @@
-<footer class="center main-footer" layout="vertical">
-    <div layout="horizontal" layout-align="center center">
+<footer class="center main-footer" layout="column">
+    <div layout="row" layout-align="center center">
         <md-button ui-sref="about">{{'FOOTER_ABOUT'|translate}}</md-button>
         <md-button ui-sref="contact">{{'FOOTER_CONTACT'|translate}}</md-button>
         <md-button ui-sref="term">{{'FOOTER_TERM'|translate}}</md-button>
