--- a/client/app/modules/notification/templates/include/challenge-notif.tpl.html
+++ b/client/app/modules/notification/templates/include/challenge-notif.tpl.html
@@ -2,7 +2,7 @@
     <div class="md-tile-left">
         <user-block style="position : relative; top:4px;" height="'64px'" width="'64px'" user-id="notif.owner"></user-block>
     </div>
-    <div class="md-tile-content" layout="horizontal" layout-align="center center">
+    <div class="md-tile-content" layout="row" layout-align="center center">
         <span>
             Created a new challenge
         </span>
