--- a/client/app/modules/notification/templates/include/note-notif.tpl.html
+++ b/client/app/modules/notification/templates/include/note-notif.tpl.html
@@ -1,8 +1,8 @@
-<md-item layout="horizontal">
+<md-item layout="row">
     <div class="md-tile-left">
         <user-block style="position : relative; top:4px;" height="'60px'" width="'60px'" user-id="notif.owner"></user-block>
     </div>
-    <div flex class="md-tile-content" layout="horizontal" layout-align="center center">
+    <div flex class="md-tile-content" layout="row" layout-align="center center">
         <span>
             publish
         </span>
