--- a/client/app/modules/profile/templates/feed.tpl.html
+++ b/client/app/modules/profile/templates/feed.tpl.html
@@ -1,4 +1,4 @@
-<section layout="vertical" layout-fill>
+<section layout="column" layout-fill>
     <md-toolbar scroll-shrink class="md-theme-green" style="position:relative;">
         <h1>Notifications</h1>
     </md-toolbar>
