--- a/client/app/modules/project/templates/modal/applyTeamModal.tpl.html
+++ b/client/app/modules/project/templates/modal/applyTeamModal.tpl.html
@@ -1,6 +1,6 @@
 <md-dialog>
     <md-toolbar>
-        <div layout="horizontal">
+        <div layout="row">
             <h2 style="text-align: center;" flex>Introduce Yourself</h2>
             <md-button class="md-button-fab" ng-click="applyTeamMsg()">
                 <i class="fa fa-check"></i>
