--- a/client/app/modules/project/templates/project-home.tpl.html
+++ b/client/app/modules/project/templates/project-home.tpl.html
@@ -1,4 +1,4 @@
-<section layout="vertical">
+<section layout="column">
     <section flex>
         <div ng-bind-html="project.home">
         </div>
