--- a/client/app/modules/project/templates/projects-list.tpl.html
+++ b/client/app/modules/project/templates/projects-list.tpl.html
@@ -15,7 +15,7 @@
                     <div hide block-md>
                         <p ng-bind-html="project.brief">
                         </p>
-                        <div layout="horizontal">
+                        <div layout="row">
                             <div flex>
                             <span>
                             {{ project.followers.length }}
