--- a/client/app/modules/project/templates/projects.tpl.html
+++ b/client/app/modules/project/templates/projects.tpl.html
@@ -1,5 +1,5 @@
-<section layout="vertical" layout-fill>
-    <md-toolbar scroll-shrink class="md-theme-light" layout="vertical" style="position:relative;z-index:10;">
+<section layout="column" layout-fill>
+    <md-toolbar scroll-shrink class="md-theme-light" layout="column" style="position:relative;z-index:10;">
         <div class="center">
             Projects
         </div>
