--- a/client/app/modules/project/templates/trello.tpl.html
+++ b/client/app/modules/project/templates/trello.tpl.html
@@ -1,4 +1,4 @@
-<section layout="vertical" flex>
+<section layout="column" flex>
 	<h2 class="center">Trello</h2>
 
 	<trello ng-if="project.trello" id="{{project.trello}}" height="100%" flex></trello>
