--- a/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/addResourceModal.tpl.html
@@ -1,6 +1,6 @@
 <md-dialog>
     <md-toolbar>
-        <div layout="horizontal">
+        <div layout="row">
             <div flex></div>
             <md-button class="md-button-fab" ng-click="addUrl(url)">
                 <i class="fa fa-save"></i>
