--- a/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
+++ b/client/app/modules/workspace/templates/modal/fileUploadModal.tpl.html
@@ -1,6 +1,6 @@
 <md-dialog>
-    <md-toolbar layout="horizontal" layout-align="start end" style="text-align:right;">
-        <div layout="horizontal">
+    <md-toolbar layout="row" layout-align="start end" style="text-align:right;">
+        <div layout="row">
             <div flex></div>
             <div class="faa-spin animated" ng-if="isUploding">
                 <i class="fa fa-spinner fa-2x"></i>
