--- a/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-crop-poster-modal.tpl.html
@@ -1,5 +1,5 @@
 <md-dialog id="edit-poster-dialog">
-    <md-toolbar layout="horizontal">
+    <md-toolbar layout="row">
         <div layout layout-align="start center">
             <div flex>Pick a poster image</div>
             <md-button class="md-button-fab"  ng-click="cancel()">
