--- a/client/app/modules/admin/challenge/templates/modal/challenge-edit-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-edit-modal.tpl.html
@@ -1,5 +1,5 @@
 <md-dialog>
-    <md-toolbar layout="horizontal" layout-align="">
+    <md-toolbar layout="row" layout-align="">
         <div layout layout-align="start center">
             <div flex>Edit home page</div>
             <span class="faa-spin animated" ng-if="isLoading">
@@ -16,7 +16,7 @@
     <md-content>
         <form name="descriptionForm">
             <textarea ui-tinymce="tinymceOption" name='brief' ng-model="newChallenge.home"/></textarea>
-            <!--<md-button type="button" style="width:100%;" class="md-button-raised" ng-click="update(newChallenge)">-->
+            <!--<md-button type="button" style="width:100%;" class="md-raised" ng-click="update(newChallenge)">-->
             <!--<span class="faa-spin animated" ng-if="isLoading">-->
                 <!--<i class="fa fa-spinner"></i>-->
             <!--</span>-->
