--- a/client/app/modules/admin/challenge/templates/modal/challenge-remove-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-remove-modal.tpl.html
@@ -1,11 +1,11 @@
 <md-dialog>
     <form name="removeChallengeForm">
-        <md-toolbar layout="horizontal" layout-align="">
+        <md-toolbar layout="row" layout-align="">
             <div layout layout-align="start center">
                 <div  flex class="center">
                     <i class="fa fa-warning">Warning</i>
                 </div>
-                <md-button class="md-button-fab md-theme-red" ng-click="delete()" ng-disabled="removeChallengeForm.$invalid">
+                <md-button class="md-button-fab md-warn" ng-click="delete()" ng-disabled="removeChallengeForm.$invalid">
                     <i class="fa fa-ban"></i>
                 </md-button>
                 <md-button class="md-button-fab" ng-click="cancel()">
