--- a/client/app/modules/admin/challenge/templates/modal/challenge-template-modal.tpl.html
+++ b/client/app/modules/admin/challenge/templates/modal/challenge-template-modal.tpl.html
@@ -1,6 +1,6 @@
 <md-dialog>
     <form name="templateForm">
-        <md-toolbar layout="horizontal" layout-align="">
+        <md-toolbar layout="row" layout-align="">
             <div layout layout-align="start center">
                 <span flex>Note templates</span>
                 <span class="faa-spin animated" ng-if="isLoading">
