--- a/client/app/modules/admin/project/templates/edit.tpl.html
+++ b/client/app/modules/admin/project/templates/edit.tpl.html
@@ -1,7 +1,7 @@
-<md-content layout="horizontal" layout-fill>
+<md-content layout="row" layout-fill>
     <md-sidenav class="md-sidenav-left md-whiteframe-z2 left" component-id="left">
-        <md-content style="padding-left: 20px;" layout="vertical" >
-            <md-toolbar layout="horizontal">
+        <md-content style="padding-left: 20px;" layout="column" >
+            <md-toolbar layout="row">
                 <div class="md-toolbar-tools">
                     <i class="fa fa-caret-left fa-2x my-btn" hide-md style="color:black;" ng-click="toggle()" flex></i>
                     <div>
@@ -18,12 +18,12 @@
             <md-button ng-click="popUpBanner()">
                 Edit Banner
             </md-button>
-            <md-button class="md-theme-red" ng-click="popUpRemove()">
+            <md-button class="md-warn" ng-click="popUpRemove()">
                 Delete
             </md-button>
         </md-content>
     </md-sidenav>
-    <form name="projectBasic" layout="vertical" flex class="right-part">
+    <form name="projectBasic" layout="column" flex class="right-part">
         <ui-select ng-model="project.localisation"
                    theme="selectize"
                    reset-search-input="false">
@@ -50,6 +50,6 @@
             <label for="trello">Trello Id (like <code>U0aBsIQl</code>)</label>
             <md-input id="trello" type="text"ng-model="project.trello" />
         </md-input-group>
-        <md-button flex class="md-button-raised md-button-colored" type="button" ng-click="updateProject($event)" ng-disabled="">Update</md-button>
+        <md-button flex class="md-raised md-button-colored" type="button" ng-click="updateProject($event)" ng-disabled="">Update</md-button>
     </form>
 </md-content>
