--- a/client/app/modules/challenge/templates/challenge.tpl.html
+++ b/client/app/modules/challenge/templates/challenge.tpl.html
@@ -1,6 +1,6 @@
-<md-content layout="vertical" layout-fill>
+<md-content layout="column" layout-fill>
     <md-toolbar scroll-shrink class="home-header">
-        <div layout="vertical" class="content">
+        <div layout="column" class="content">
             <h1>
                 {{ challenge.title }}
             </h1>
@@ -13,23 +13,23 @@
         <md-button class="md-button-fab" ng-click="toggleLeft()" style="bottom:-24px;position:absolute; left:20px;z-index : inherit" hide-md>
             <i class="fa fa-bars"></i>
         </md-button>
-        <md-button class="md-button-fab md-button-raised" ng-click="follow()" style="position:absolute; right:20px; z-index: inherit" ng-class="{ 'md-theme-indigo' : isFollow }" ng-if="currentUser && !isOwner">
+        <md-button class="md-button-fab md-raised" ng-click="follow()" style="position:absolute; right:20px; z-index: inherit" ng-class="{ 'md-theme-indigo' : isFollow }" ng-if="currentUser && !isOwner">
             <i class="fa fa-thumbs-up"></i>
         </md-button>
     </md-toolbar>
 
     <h3 class="show-line-breaks">{{ challenge.brief }}</h3>
 
-    <div layout="horizontal" layout-align="center center">
+    <div layout="row" layout-align="center center">
         <img ng-if="challenge.banner" src="{{ challenge.banner }}" >
     </div>
 
-    <div layout="vertical">
+    <div layout="column">
         <md-button ui-sref="challengeAdmin({ cid : challenge._id })" ng-if="isOwner">
             <i class="fa fa-pencil-square-o baseColor"></i> Edit
         </md-button>
 
-        <div layout="horizontal">
+        <div layout="row">
             <div>
                 <span>
                     {{ challenge.followers.length }}
@@ -49,10 +49,10 @@
 
     <div flex>
         <showtags entity="challenge"></showtags>
-        <section class="challenge-home" layout="vertical">
+        <section class="challenge-home" layout="column">
             <article class="html-content" flex ng-bind-html="challenge.home"></article>
             <div class="participate-btn">
-                <md-button ng-if="currentUser" ng-click="participate()" class="md-button-raised md-button-colored">
+                <md-button ng-if="currentUser" ng-click="participate()" class="md-raised md-button-colored">
                     Participate in this challenge
                 </md-button>
             </div>
