--- a/client/app/modules/challenge/templates/challenges.tpl.html
+++ b/client/app/modules/challenge/templates/challenges.tpl.html
@@ -1,5 +1,5 @@
-<section layout="vertical" layout-fill>
-    <md-toolbar scroll-shrink class="md-theme-indigo" layout="vertical" style="position:relative;z-index:10;">
+<section layout="column" layout-fill>
+    <md-toolbar scroll-shrink class="md-theme-indigo" layout="column" style="position:relative;z-index:10;">
         <div class="center">
             Challenges 
         </div>
