--- a/client/app/modules/notes/templates/add-note-modal.tpl.html
+++ b/client/app/modules/notes/templates/add-note-modal.tpl.html
@@ -1,5 +1,5 @@
 <md-dialog>
-    <md-toolbar layout="horizontal" layout-align="">
+    <md-toolbar layout="row" layout-align="">
         <div layout layout-align="start center">
             <div flex>Add Note</div>
             <span class="faa-spin animated" ng-if="isLoading">
