--- a/client/app/modules/profile/templates/profile.tpl.html
+++ b/client/app/modules/profile/templates/profile.tpl.html
@@ -1,4 +1,4 @@
-<section layout="vertical" layout-fill>
+<section layout="column" layout-fill>
     <md-toolbar scroll-shrink class="md-theme-green" style="position:relative;">
         <h1 style="margin-top:0;margin-bottom:0; padding-left:25px;">
            {{ profile.realname || profile.username }}
