--- a/client/app/modules/project/templates/modal/shareModal.tpl.html
+++ b/client/app/modules/project/templates/modal/shareModal.tpl.html
@@ -1,5 +1,5 @@
 <md-dialog>
-    <md-toolbar layout="horizontal">
+    <md-toolbar layout="row">
         <div flex></div>
         <md-button ng-click="cancel()" class="md-button-fab">
             <i class="fa fa-times"></i>
