--- a/client/app/modules/tag/templates/tag.tpl.html
+++ b/client/app/modules/tag/templates/tag.tpl.html
@@ -1,5 +1,5 @@
-<md-content layout="vertical" layout-fill>
-    <md-toolbar scroll-shrink class="md-theme-indigo" layout="vertical" style="position:relative;z-index:10;">
+<md-content layout="column" layout-fill>
+    <md-toolbar scroll-shrink class="md-theme-indigo" layout="column" style="position:relative;z-index:10;">
         <h1 class="center">
             Results for tag #{{ tag }}
         </h1>
