fixed register form

--- a/client/app/modules/auth/templates/signin.tpl.html
+++ b/client/app/modules/auth/templates/signin.tpl.html
@@ -1,4 +1,4 @@
-<section  ng-controller="LoginCtrl" layout="column" class="signin-form">
+<md-content ng-controller="LoginCtrl" layout="column" class="signin-form">
     <div id="signin-container" style="max-width: 900px; margin: auto;">    
         <form name="signinForm" layout="column">
             <md-input-container>
@@ -66,4 +66,4 @@
             </div>
         </div>
     </div>
-</section>
+</md-content>
